# DARKSEID

./: .gitignore  Chatbot.ipynb  Dockerfile  Dockerfile.rag  README.md  api.py  docker-compose.yml  env.example  init-db.sql  main.py  postman_guide.txt  project.py  pyproject.toml  requirements-hf.txt  requirements-voice.txt  requirements.txt  server_log.txt  test_document.txt  test_documentation.txt  test_instructions.txt
app/: avatar_agent.py  main.py  project.py  quiz_engine.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/components/: ChatInterface.tsx  HealthStatus.tsx  InteractionZone.tsx  LearningArchitect.tsx  MindmapRenderer.tsx  NeuralConsole.tsx  QuizCard.tsx  Sidebar.tsx  VoiceAvatar.tsx
frontend/src/store/: useAgentStore.ts
mcp tools/: Rag.py  requirements-rag.txt
uploads/: 85074894-7922-457e-97b4-5f603d7d6242.docx
