[project]
name = "darksied"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "google-genai>=1.60.0",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=0.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.6",
    "opik>=1.9.93",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "huggingface-hub>=0.23.0",
    "unstructured[all-docs]>=0.18.27",
    "uvicorn>=0.40.0",
    "livekit-agents>=1.3.12",
    "livekit-plugins-google>=1.3.12",
    "livekit-plugins-silero>=1.3.12",
    "livekit-plugins-bey>=0.8.0",
    "aiohttp>=3.9.0",
    "langchain-qdrant>=1.1.0",
    "langgraph-checkpoint-postgres>=3.0.3",
    "psycopg-binary>=3.3.2",
]
